@@ -1,6 +1,4 @@
 {% load modeladmin_tags %}
 <tr{{ row_attrs }}>
-    {% for item in result %}
-        {% result_row_value_display forloop.counter0 %}
-    {% endfor %}
+    {% for item in result %}{{ item }}{% endfor %}
 </tr>
